--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,7 @@
         {% endif %}
     </div>
 
-    <div class="cursor-pointer bg-blue-100 inline-block px-8 py-2 rounded-md">{{form.submit()}}</div>
+    {{form.submit(class_="cursor-pointer bg-blue-100 inline-block px-8 py-2 rounded-md")}}
 </form>
 
 <style>
