--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,16 +5,16 @@
 
     <div class="">
         <div class="flex items-center space-x-4 border justify-center my-5 py-5">
-            <p>Align dates by:</p> 
+            <p>Align dates by:</p>
             {{ form.lang }}
         </div>
 
         {% if form.lang.errors %}
-            <ul class="errors">
+        <ul class="errors">
             {% for error in form.lang.errors %}
-                <li>{{ error }}</li>
+            <li>{{ error }}</li>
             {% endfor %}
-            </ul>
+        </ul>
         {% endif %}
     </div>
 
@@ -24,11 +24,11 @@
             {{ form.last_years_file }}
         </div>
         {% if form.last_years_file.errors %}
-            <ul class="errors">
+        <ul class="errors">
             {% for error in form.last_years_file.errors %}
-                <li>{{ error }}</li>
+            <li>{{ error }}</li>
             {% endfor %}
-            </ul>
+        </ul>
         {% endif %}
     </div>
 
@@ -38,22 +38,48 @@
             {{ form.this_years_file }}
         </div>
         {% if form.this_years_file.errors %}
-            <ul class="errors">
+        <ul class="errors">
             {% for error in form.this_years_file.errors %}
-                <li>{{ error }}</li>
+            <li>{{ error }}</li>
             {% endfor %}
-            </ul>
+        </ul>
         {% endif %}
     </div>
 
     {{form.submit(class_="cursor-pointer bg-blue-100 inline-block px-8 py-2 rounded-md")}}
 </form>
 
+<div>
+    <p class="text-xs my-4">
+        This program is used to transfer dedication text from one year's spreadsheet to the next. The reason this is
+        neccessary is because the dedications are written by users based on the hebrew date, and so we need to move them
+        to
+        the correct hebrew date of the next year. The hitch is that some dates don't have enough space, etc so the
+        solution
+        is that the program creates another spreadsheet with all the problematic ones by problem category (exceeds
+        character
+        limit, not enough lines for that date, etc).
+    </p>
+    <ol class="text-xs pb-4 list-decimal text-left font-bold">
+        <li>Two spreadsheets are required: The previous year's (filled out), and the upcoming year's (blank).</li>
+        <li>They must be formatted the same way (same amount of columns, same column names, etc).</li>
+        <li>The program will assume that the sheet we are working with (on both years' spreadsheets) is the last page.
+            Therefore if there needs to be a page on the spreadsheet with irrelevant data (e.g user instructions) make
+            sure
+            to
+            put it before the relevant page.</li>
+    </ol>
+
+
+
+</div>
+
 <style>
-    body{
+    body {
         text-align: center;
     }
-    .form-item{
+
+    .form-item {
         margin: 0 auto 1em auto;
         list-style: none;
     }
